src/user/k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user

spec:
  ports:
  - name: http
    port: 80
    targetPort: http
